<resources>
    <string name="app_name">SportNewsAndInformation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="historical_archives">Historical Archives</string>
    <string name="add_new_sport">Add new Sport</string>
    <string name="instructions">Instructions</string>
    <string name="instruction">Instruction</string>
    <string name="image">Image</string>
    <string name="avatar">avatar</string>
    <string name="my_name">Thao Vu</string>
    <string name="my_description">My favourite sport is Football</string>
    <string name="add_news">Add News</string>
    <string name="add_athlete">Add Athlete</string>
    <string-array name="sport_types_array">
        <item>Measure</item>
        <item>Precision</item>
        <item>Spectacle</item>
        <item>Combat</item>
        <item>Play</item>
    </string-array>
</resources>